src/scss/06_components/paragraphs/_common.scss
// @file
// Styles for all paragraphs.

/* stylelint-disable max-nesting-depth */
.hdbt-admin {
  // Remove white background and paddings from first level of paragraph elements.
  .paragraphs-tabs-wrapper {
    .paragraph-type-label,
    .paragraph-summary .summary-content {
      font-size: remify(16px) !important;
      line-height: 1.5 !important;
    }

    table.field-multiple-table {
      > thead {
        // Paragraph header colors.
        > tr > th {
          background: #f4f4f4;
          color: $color-black;
        }

        // Paragraph header label color.
        .form-item__label--multiple-value-form {
          color: $color-black;
        }

        // Paragraph header "Edit all" button colors.
        .paragraphs-icon-button {
          border: 2px solid var(--gin-color-text-light) !important;
          color: var(--gin-color-text-light);

          &:hover,
          &:not(:focus):hover {
            background: var(--gin-color-primary);
            border: 2px solid var(--gin-color-primary) !important;
            color: $color-white;
          }
        }
      }
    }

    // Paragraphs "table drag toggle" button styles.
    .tabledrag-toggle-weight-wrapper {
      .action-link {
        color: var(--gin-color-text-light);

        &::before {
          // Gin sets this color as important.
          background: var(--gin-color-text-light) !important;
        }

        &:hover,
        &:not(:focus):hover {
          background: transparent;
          color: var(--gin-color-primary);

          &::before {
            // Gin sets this color as important.
            background-color: var(--gin-color-primary) !important;
          }
        }

      }
    }

    // Paragraph background styles.
    table.field-multiple-table .draggable {
      background-color: $color-white;
      margin-top: 0.5rem;

      // Hide the paragraph bullet when you are not able to organize paragraphs.
      td.paragraph-bullet::after {
        display: none;
      }
    }
  }

  // Remove obsolete bottom margin from form item without the label.
  .paragraphs-subform .form-item--multiple .field-multiple-table .form-item--no-label {
    margin-bottom: 0;
  }

  // Hide "(all languages)" from all paragraph fields.
  // There's no alter hook or preprocess which can be used to easily remove
  // the "addTranslatabilityClue" from async paragraph fields.
  .translation-entity-all-languages {
    display: none;
  }

  .js & {
    // Reset padding on paragraph selection field.
    .field--widget-paragraphs .paragraphs-dropbutton-wrapper .dropbutton-multiple {
      padding: 0;
    }

    // Reset the excessive spacing on paragraph drag handles.
    .field--widget-paragraphs .field-multiple-drag {
      min-width: 30px;

      // Reduce the space between drag handle and the edges of the paragraph
      // while retaining the drag handle centered.
      &.tabledrag-cell--only-drag {
        margin-left: -2px;
        margin-right: 6px;
        min-width: $spacing;
      }
    }

    // Align paragraph labels to center.
    .paragraph-top .paragraph-type,
    .paragraph-top .paragraph-summary {
      align-self: center;
    }

    // Reset paddings on paragraphs content areas.
    .paragraphs-tabs-wrapper .field-multiple-table .draggable {
      > td {
        padding: 0;
      }

      .tabledrag-handle::after {
        margin: 0;
        padding: 0;
      }
    }

    // Hide Paragraph badge.
    .paragraphs-badge {
      display: none;
    }
  }

  // Add spacing for each form item, but not for entity autocomplete as the
  // the autocomplete field is rendered differently.
  .paragraphs-subform .field-multiple-table.draggable-table .form-item:not(.form-type--entity-autocomplete) {
    margin-bottom: var(--gin-spacing-m);
  }
}

